--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -17,7 +17,15 @@ jobs:
         uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: 1.1.0
+      
+      - name: Prepare variables for Terraform
+        run: |
+          echo "GCS_KEY_BASE64=\${{ secrets.GCS_KEY }}" >> $GITHUB_ENV
+        shell: bash
 
+       env:
+         GCS_KEY_BASE64: ${{ env.GCS_KEY_BASE64 }}
+         
       - name: Apply Terraform
         run: |
           terraform init
