--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Apply Terraform
         run: |
           terraform init
-          terraform apply -auto-approve
+          terraform apply -auto-approve -var "gcs_key_base64=${GCS_KEY_BASE64}"
           
       - uses: google-github-actions/setup-gcloud@v0
         with:
